--- a/package.json
+++ b/package.json
@@ -6,5 +6,5 @@
         "gulp-uglify": "^3.0.2"
     },
     "private": true,
-    "packageManager": "pnpm@9.5.0"
+    "packageManager": "npm@10.8.2"
 }
